--- a/404.md
+++ b/404.md
@@ -1,9 +1,20 @@
 ---
-layout: page
+layout: default
 title: 404 - Page not found
 permalink: /404.html
 ---
 
-Sorry, we can't find that page that you're looking for. You can try again by going [back to the homepage]({{ site.baseurl }}/).
-
-[<img src="{{ site.baseurl }}/images/404.jpg" alt="Constructocat by https://github.com/jasoncostello" style="width: 400px;"/>]({{ site.baseurl }}/)
+<div class="error-page">
+  <div class="error-code">404</div>
+  <h1 class="error-message">ទំព័រមិនត្រូវបានរកឃើញទេ</h1>
+  <p style="color: var(--text-secondary); margin-bottom: 2rem;">
+    សូមអភ័យទោស យើងមិនអាចរកឃើញទំព័រដែលអ្នកកំពុងស្វែងរកទេ។
+  </p>
+  <a href="{{ site.baseurl }}/" class="btn">
+    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <line x1="19" y1="12" x2="5" y2="12"></line>
+      <polyline points="12 19 5 12 12 5"></polyline>
+    </svg>
+    ត្រឡប់ទៅទំព័រដើម
+  </a>
+</div>
